--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-time-machine
 title: Reasoning Agents Final Project
 permalink: /:year/:month/:day/:title/
